--- a/styles/globals.css
+++ b/styles/globals.css
@@ -192,3 +192,18 @@ pre {
     linear-gradient(black, black);
   -webkit-mask-composite: xor;
 }
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 1fr min(60ch, calc(100% - 64px)) 1fr;
+  grid-column-gap: 32px;
+}
+
+.wrapper > * {
+  grid-column: 2;
+}
+
+.full-bleed {
+  width: 100%;
+  grid-column: 1 / -1;
+}
