--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,11 +19,20 @@
 }
 
 .prose {
-  @apply text-silver-700;
+  @apply text-silver-600;
 }
 
 .prose h2 {
-  @apply text-2xl font-bold mt-8 mb-4 text-silver-200;
+  @apply text-2xl font-bold mt-8 mb-4 text-silver-300;
+}
+
+.prose h3 {
+  @apply text-xl font-semibold mt-8 mb-4 text-silver-300;
+}
+
+.prose strong {
+  /* Don't apply styles to next/image */
+  @apply font-semibold text-silver-300;
 }
 
 .prose a {
@@ -44,7 +53,9 @@
 }
 
 .prose code {
-  @apply text-gray-800 dark:text-gray-200 px-1 py-0.5 border border-gray-100 dark:border-gray-800 rounded-lg bg-gray-100 dark:bg-gray-900;
+  box-shadow: inset 0 0 0 1px hsl(0deg 0% 100% / 10%);
+
+  @apply text-silver-700 px-1 py-0.5 rounded-md bg-shark-900;
 }
 
 .prose pre code {
@@ -192,11 +203,15 @@ pre {
   box-shadow: inset 0 0 0 1px hsl(0deg 0% 100% / 10%);
 }
 
+.shiny-border-md {
+  box-shadow: inset 0 0 0 4px hsl(0deg 0% 100% / 10%);
+}
+
 .polka {
   background-image: radial-gradient(rgb(31, 30, 29) 10%, transparent 10%),
     radial-gradient(rgb(31, 30, 29) 10%, transparent 10%);
   background-position: 0px 0px, 8px 8px;
-  background-size: 16px 16px;
+  background-size: 20px 20px;
   background-color: rgb(16, 16, 16);
 }
 
