feat: add theme for code block + syntax highlighting
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 @tailwind base;
 @tailwind components;
+@import "./syntax-highlighting.css";
 @tailwind utilities;
 
 .prose .anchor {
@@ -40,115 +41,13 @@
   content: "#";
 }
 
-.prose *:hover > .anchor {
-  @apply visible;
-}
-
-/* .prose pre {
-  @apply border border-gray-200 bg-gray-50 dark:border-gray-700 dark:bg-gray-900;
-} */
-
-.prose code::before,
-.prose code::after {
-  content: none;
-}
-
-.prose pre code {
-  @apply text-silver-600 p-0 bg-transparent shadow-none;
-  border: initial;
+code {
+  @apply px-1 py-0.5 rounded-md bg-shark-900 font-normal shadow-border-shiny !text-silver-600;
 }
 
 .prose img {
   /* Don't apply styles to next/image */
   @apply m-0;
-}
-
-.prose > :first-child {
-  /* Override removing top margin, causing layout shift */
-  margin-top: 1.25em !important;
-  margin-bottom: 1.25em !important;
-}
-
-/* Prism Styles */
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  @apply text-gray-700 dark:text-gray-300;
-}
-
-.token.punctuation {
-  @apply text-gray-700 dark:text-gray-300;
-}
-
-.token.property,
-.token.tag,
-.token.boolean,
-.token.number,
-.token.constant,
-.token.symbol,
-.token.deleted {
-  @apply text-green-500;
-}
-
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-  @apply text-purple-500;
-}
-
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-  @apply text-yellow-500;
-}
-
-.token.atrule,
-.token.attr-value,
-.token.keyword {
-  @apply text-blue-500;
-}
-
-.token.function,
-.token.class-name {
-  @apply text-pink-500;
-}
-
-.token.regex,
-.token.important,
-.token.variable {
-  @apply text-yellow-500;
-}
-
-code[class*="language-"],
-pre[class*="language-"] {
-  @apply p-10 rounded-xl border-0 bg-shark-800 shadow-border-shiny;
-}
-
-pre::-webkit-scrollbar {
-  display: none;
-}
-
-pre {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
-.rehype-code-title {
-  @apply px-4 py-3 font-mono text-sm font-bold  bg-shark-700 rounded-t-xl border border-b-0 border-[#29292A];
-}
-
-.rehype-code-title + pre {
-  @apply mt-0 rounded-t-none;
-}
-
-.highlight-line {
-  @apply block px-4 -mx-4 bg-gray-100 border-l-4 border-blue-500 dark:bg-gray-800;
 }
 
 .gradient-bg {
