--- a/styles/globals.css
+++ b/styles/globals.css
@@ -109,3 +109,13 @@ code {
 .main-gradient {
   background: linear-gradient(rgb(17, 17, 17) 0%, rgb(12, 12, 12) 100%);
 }
+
+.blue-gradient {
+  background-image: linear-gradient(
+    25deg,
+    hsl(240deg 100% 20%) 0%,
+    hsl(211deg 100% 36%) 39%,
+    hsl(196deg 100% 45%) 61%,
+    hsl(181deg 100% 50%) 100%
+  );
+}
