--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
 }
 
 .prose {
-  @apply !text-silver;
+  @apply !text-silver font-light;
 }
 
 .prose h2 {
@@ -98,24 +98,10 @@ code {
   background-repeat: no-repeat;
 }
 
-/* .bg-test {
-  background: linear-gradient(120deg, hsl(227 47.2% 21%), hsl(298 34.4% 15.3%));
-} */
-
 .gradient-bg-flipp {
   background: linear-gradient(rgb(17, 17, 17) 0%, rgb(12, 12, 12) 100%);
 }
 
 .main-gradient {
   background: linear-gradient(rgb(17, 17, 17) 0%, rgb(12, 12, 12) 100%);
-}
-
-.blue-gradient {
-  background-image: linear-gradient(
-    25deg,
-    hsl(240deg 100% 20%) 0%,
-    hsl(211deg 100% 36%) 39%,
-    hsl(196deg 100% 45%) 61%,
-    hsl(181deg 100% 50%) 100%
-  );
 }
