--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,7 +46,7 @@
 }
 
 code {
-  @apply px-1 py-0.5 rounded-md bg-[#2C2C2C] !font-normal  !text-[#EBEBEB];
+  @apply px-1 py-0.5 rounded-md bg-shark-900 shadow-border-shiny !font-normal  !text-[#EBEBEB];
 }
 
 .prose img {
