--- a/styles/syntax-highlighting.css
+++ b/styles/syntax-highlighting.css
@@ -27,6 +27,9 @@ div[data-rehype-pretty-code-fragment] .line {
   padding-right: 0.75rem;
   border-left-width: 4px;
   border-left-color: transparent;
+  display: block;
+  width: 100%;
+  height: 1.5rem;
 }
 
 div[data-rehype-pretty-code-fragment] .line--highlighted {
