--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,14 @@
   @apply !text-silver font-light;
 }
 
+.prose h2,
+.prose h3,
+.prose h4,
+.prose h5,
+.prose h6 {
+  @apply text-silver-400 font-bold;
+}
+
 .prose h2 {
   @apply text-2xl font-bold mt-8 mb-4 text-silver-400;
 }
