feat: add callout component
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,14 @@ code::after {
   content: "" !important;
 }
 
+.prose aside p {
+  @apply m-0 !important;
+}
+
+.prose aside a {
+  @apply text-inherit !important;
+}
+
 .prose img {
   /* Don't apply styles to next/image */
   @apply m-0;
