--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@ body {
 }
 
 .prose {
-  @apply !text-silver font-extralight text-lg md:text-xl;
+  @apply !text-silver-600 font-extralight text-lg md:text-xl;
 }
 
 .prose h2,
@@ -28,28 +28,28 @@ body {
 .prose h4,
 .prose h5,
 .prose h6 {
-  @apply text-silver-400 font-bold;
+  @apply text-silver font-semibold;
 }
 
 .prose h1 {
-  @apply text-5xl font-bold mt-8 mb-4 text-silver-400;
+  @apply text-5xl font-bold mt-8 mb-4;
 }
 
 .prose h2 {
-  @apply text-2xl md:text-3xl font-bold mt-8 mb-4 text-silver-400;
+  @apply text-2xl md:text-3xl font-bold mt-8 mb-4;
 }
 
 .prose h3 {
-  @apply text-2xl font-bold mt-8 mb-4 text-silver-400;
+  @apply text-2xl font-bold mt-8 mb-4;
 }
 
 .prose strong {
   /* Don't apply styles to next/image */
-  @apply font-semibold text-silver-300;
+  @apply font-semibold text-silver-500;
 }
 
 .prose a {
-  @apply text-silver-400 hover:text-silver-800 transition-all;
+  @apply text-silver-400 hover:text-silver-800 transition-all no-underline;
 }
 
 .prose .anchor:after {
