--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,10 @@
 @import "./syntax-highlighting.css";
 @tailwind utilities;
 
+.anchor:hover {
+  @apply visible;
+}
+
 .prose .anchor {
   @apply absolute invisible no-underline;
   margin-left: -1em;
@@ -10,17 +14,8 @@
   width: 80%;
   cursor: pointer;
 }
-
-body {
-  /* font-size: calc(1rem + 0.8vw) !important; */
-}
-
-.anchor:hover {
-  @apply visible;
-}
-
 .prose {
-  @apply !text-silver-600 font-extralight text-lg md:text-xl;
+  @apply !text-silver-600 font-extralight !text-lg;
 }
 
 .prose h2,
@@ -32,15 +27,15 @@ body {
 }
 
 .prose h1 {
-  @apply text-5xl font-bold mt-8 mb-4;
+  @apply text-4xl font-bold mt-8 mb-4;
 }
 
 .prose h2 {
-  @apply text-2xl md:text-3xl font-bold mt-8 mb-4;
+  @apply text-3xl  font-bold mt-8 mb-4;
 }
 
 .prose h3 {
-  @apply text-xl md:text-2xl font-bold mt-8 mb-4;
+  @apply text-2xl font-bold mt-8 mb-4;
 }
 
 .prose strong {
@@ -49,7 +44,7 @@ body {
 }
 
 .prose a {
-  @apply text-silver-400 hover:text-silver-800 transition-all no-underline;
+  @apply text-silver-400 hover:text-silver-800 transition-all font-light underline;
 }
 
 .prose .anchor:after {
@@ -72,7 +67,7 @@ body {
 }
 
 code {
-  @apply px-1 py-0.5 rounded-md bg-shark-700 shadow-border-shiny !font-normal !text-silver-100;
+  @apply px-1 py-0.5 rounded-md bg-cod-gray-400 border border-cod-gray-300 !font-light !text-silver-600;
 }
 
 code::before,
