feat: relative time warning for articles
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,10 @@
 @import "@radix-ui/colors/orange-alpha.css";
 @import "@radix-ui/colors/orange-dark.css";
 @import "@radix-ui/colors/orange-dark-alpha.css";
+@import "@radix-ui/colors/amber.css";
+@import "@radix-ui/colors/amber-alpha.css";
+@import "@radix-ui/colors/amber-dark.css";
+@import "@radix-ui/colors/amber-dark-alpha.css";
 
 :root {
   --sh-sign: #8996a3;
