feat: update article
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/app/globals.css
+++ b/app/globals.css
@@ -90,6 +90,10 @@ body {
   @apply text-2xl;
 }
 
+.prose p {
+  @apply !leading-relaxed;
+}
+
 .prose strong {
   @apply font-semibold text-gray-12;
 }
